@@ -14,9 +14,8 @@
 
     <properties>
         <!-- Java -->
-        <java.version>21</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <java.version>25</java.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -35,29 +34,29 @@
         <!-- Spring Boot and Cloud -->
         <spring-boot.version>3.5.9</spring-boot.version>
         <spring-cloud.version>2025.0.1</spring-cloud.version>
-        <springdoc-openapi.version>2.8.6</springdoc-openapi.version>
+        <springdoc-openapi.version>2.8.15</springdoc-openapi.version>
 
         <!-- Database -->
-        <postgresql.version>42.7.4</postgresql.version>
-        <r2dbc-postgresql.version>1.0.7.RELEASE</r2dbc-postgresql.version>
-        <flyway.version>10.22.0</flyway.version>
+        <postgresql.version>42.7.8</postgresql.version>
+        <r2dbc-postgresql.version>1.0.9.RELEASE</r2dbc-postgresql.version>
+        <flyway.version>11.7.2</flyway.version>
 
         <!-- OpenAPI -->
-        <openapi-generator.version>7.10.0</openapi-generator.version>
-        <swagger-annotations.version>2.2.30</swagger-annotations.version>
+        <openapi-generator.version>7.19.0</openapi-generator.version>
+        <swagger-annotations.version>2.2.42</swagger-annotations.version>
 
         <!-- Mapping -->
         <mapstruct.version>1.6.3</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 
         <!-- Utils -->
-        <lombok.version>1.18.38</lombok.version>
+        <lombok.version>1.18.42</lombok.version>
 
         <!-- Testing -->
-        <testcontainers.version>1.20.4</testcontainers.version>
+        <testcontainers.version>1.21.4</testcontainers.version>
 
         <!-- Logging -->
-        <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
+        <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
 
         <!-- Reflections -->
         <reflections.version>0.10.2</reflections.version>
@@ -66,26 +65,27 @@
         <resilience4j.version>2.3.0</resilience4j.version>
 
         <!-- gRPC -->
-        <grpc.version>1.68.2</grpc.version>
-        <protobuf.version>3.25.5</protobuf.version>
+        <grpc.version>1.79.0</grpc.version>
+        <protobuf.version>4.33.5</protobuf.version>
 
         <!-- AWS -->
-        <aws-sdk.version>2.31.32</aws-sdk.version>
-        <spring-cloud-aws.version>3.3.0</spring-cloud-aws.version>
+        <aws-sdk.version>2.41.24</aws-sdk.version>
+        <spring-cloud-aws.version>3.4.2</spring-cloud-aws.version>
 
         <!-- Azure -->
-        <spring-cloud-azure.version>5.22.0</spring-cloud-azure.version>
+        <spring-cloud-azure.version>5.24.1</spring-cloud-azure.version>
 
         <!-- Google Cloud -->
-        <spring-cloud-gcp.version>6.1.1</spring-cloud-gcp.version>
+        <spring-cloud-gcp.version>6.5.4</spring-cloud-gcp.version>
 
         <!-- Plugins -->
-        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
-        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
-        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
-        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
+        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
+        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -216,8 +216,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>${java.version}</release>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
@@ -242,6 +241,7 @@
                         </annotationProcessorPaths>
                         <compilerArgs>
                             <arg>-parameters</arg>
+                            <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -306,7 +306,40 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                 </plugin>
+
+                <!-- Maven Enforcer Plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven-enforcer-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>enforce-java</id>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                            <configuration>
+                                <rules>
+                                    <requireJavaVersion>
+                                        <version>[21,)</version>
+                                        <message>JDK 21+ is required to build this project.</message>
+                                    </requireJavaVersion>
+                                </rules>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
+    <!-- Profile for building with Java 21 compatibility -->
+    <profiles>
+        <profile>
+            <id>java21</id>
+            <properties>
+                <java.version>21</java.version>
+            </properties>
+        </profile>
+    </profiles>
 </project>
